--- a/GLFinalWork.vcxproj
+++ b/GLFinalWork.vcxproj
@@ -60,6 +60,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <ExternalIncludePath>D:\Application\Eigen;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
   </PropertyGroup>
@@ -102,6 +103,8 @@
     </QtMoc>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="utils.cpp" />
+    <ClInclude Include="utils.h" />
     <QtRcc Include="GLFinalWork.qrc" />
     <QtUic Include="GLFinalWork.ui" />
     <QtMoc Include="GLFinalWork.h" />
@@ -109,7 +112,9 @@
     <ClCompile Include="main.cpp" />
     <None Include="GLFinalWork.ico" />
     <ResourceCompile Include="GLFinalWork.rc" />
+    <QtMoc Include="My3DWindow.h" />
     <ClInclude Include="stdafx.h" />
+    <ClCompile Include="My3DWindow.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">Create</PrecompiledHeader>
